<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:gravity="center|top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_link"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63" />

            <Button
                android:id="@+id/buttonBrowser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_browser" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_mail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63" />

            <Button
                android:id="@+id/buttonMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_mail" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63" />

            <Button
                android:id="@+id/buttonPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_phone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextLat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_latitude"
                    android:inputType="text"
                    android:textColorHint="#8D6E63" />

                <EditText
                    android:id="@+id/editTextLong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_longitude"
                    android:inputType="text"
                    android:textColorHint="#8D6E63" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_map" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>